added Either example

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -23,3 +23,19 @@ log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=INFO
 log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=INFO
 log4j.logger.org.apache.spark=WARN
 log4j.logger.org.apache.hadoop=WARN
+
+# console config
+log4j.appender.myConsole=org.apache.log4j.ConsoleAppender
+log4j.appender.myConsole.target=System.out
+log4j.appender.myConsole.threshold=INFO
+log4j.appender.myConsole.layout=org.apache.log4j.PatternLayout
+log4j.appender.myConsole.layout.ConversionPattern=%d %-5p [%t] %C{2} (%F:%L) - %m%n
+
+# file config
+log4j.appender.myFile=org.apache.log4j.RollingFileAppender
+log4j.appender.myFile.File=logs/AbandonedCarts.log
+log4j.appender.myFile.threshold=INFO
+log4j.appender.myFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.myFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p %c{1}: %m%n
+
+log4j.logger.spark.examples.AbandonedCarts$=INFO, myFile
